small fixes for items alignment

--- a/client/src/share/components/LeftColumn/Navigation/MainNavigation.css
+++ b/client/src/share/components/LeftColumn/Navigation/MainNavigation.css
@@ -55,7 +55,6 @@ nav a.primary.active svg {
 .navipost__btn {
   padding-top: 10px;
   width: 70%;
-  border: 1px solid rgb(16, 16, 16);
 }
 
 .navipost__btn button {
@@ -72,6 +71,7 @@ nav a.primary.active svg {
 
 .navipost__btn button:disabled {
   background-color: rgb(160, 193, 239);
+  text-align: center;
   border: none;
   color: rgb(238, 232, 232);
 }
@@ -88,12 +88,14 @@ nav a.primary.active svg {
 
   .navipost__btn {
     width: 100%;
-    text-align: middle;
+    text-align: center;
   }
 
   .navipost__btn button {
-    width: 100%;
-    height: 49px;
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    vertical-align: middle;
     border-radius: 50%;
   }
 }
